up-to-date with ankiqt (d517d4615) and libanki (458357548)